# ScribeCat

./: .env  .env.template  .gitattributes  .gitignore  AGENTS.md  CANVAS_BROWSER_EXTENSION_GUIDE.md  CANVAS_INTEGRATION.md  CHANGELOG.md  CLAUDE_INTEGRATION_COMPLETE.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  GITHUB_SETUP.md  IMPLEMENTATION_SUMMARY.md  INTELLIGENT_BUG_REPORTING_IMPLEMENTATION.md  INTELLIGENT_BUG_REPORTING_SPEC.md  KEYBOARD_SHORTCUTS.md  LOCAL_HOSTING_SETUP.md  LaunchScribeCatDesktop.bat  LaunchScribeCatDesktop.command  MANUAL_QA.md  OPENAI_TO_CLAUDE_MIGRATION_COMPLETE.md  PROJECT_NOTES.md  QA.md  README.md  ScribeCat.bat  ScribeCat.command  ScribeCat.sh  demo-subscription.js  devcontainer_Dockerfile.dms  devcontainer_devcontainer.json  enhanced-git-safety.sh  git-safety.sh  github-setup-helper.sh  index.backup.20250915-170241.html  index.before_v1.9.6.html  index.before_v1.9.7.html  index.broken.1757900208.txt  index.html  index.html.uri  (+7 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
.scripts/: build-tauri-dist.mjs  ensure-linux-tauri-deps.mjs  prepare-tauri-assets.mjs  prepare-tauri-dist.mjs  (+1 more)
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/scripts/: prepare-dist.mjs
src-tauri/src/: airtable.rs  assemblyai.rs  audio.rs  canvas.rs  diagnostics.rs  env_alias.rs  http_client.rs  ics.rs  main.rs  make.rs  openai.rs  save.rs
src-tauri/src/commands/: airtable.rs  assemblyai.rs  calendar.rs  canvas.rs  diag.rs  files.rs  mod.rs  openai.rs  system.rs  util.rs
(+179 files in other folders)
