[package]
name = "scribecat-app"
version = "0.1.0"
edition = "2021"
description = "ScribeCat desktop shell"

[dependencies]
dotenvy = "0.15.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = [] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
