[package]
name = "scribecat-app"
version = "0.1.0"
edition = "2021"
description = "ScribeCat desktop shell"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-notification = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }
