[package]
name = "scribecat-app"
version = "0.1.0"
edition = "2021"
description = "ScribeCat desktop shell"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2", features = [] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
once_cell = "1.19"
regex = "1.11"
base64 = "0.22"
urlencoding = "2.1"

[build-dependencies]
tauri-build = { version = "2", features = [] }
